# fivecentplots

./: .coverage  .gitignore  README.md  README.rst  barplot.html  boxplot.html  changelog.md  conda_release.py  contour.html  defaults.html  design.html  examples.html  genindex.html  grouping.html  heatmap.html  hist.html  index.html  ini.html  install.html  keyword.html  layout.html  misc.html  modules.html  objects.inv  older.html  overview.html  params.json  plot.html  py-modindex.html  pyproject.toml  quick.html  ranges.html  requirements.txt  requirements_dev.txt  sandbox.html  search.html  searchindex.js  setup.cfg  setup.py  styles.html  (+1 more)
.github/workflows/: tests.yml
0.2.2/: examples.html  index.html  params.json
0.2.2/_sources/: index.txt  quick.txt
0.3.0/: .buildinfo  boxplot.html  genindex.html  hist.html  modules.html  older.html  sandbox.html  searchindex.js  ticks.html
0.3.0/_sources/: contour.ipynb.txt  heatmap.ipynb.txt  index.rst.txt  keyword.rst.txt  layout.rst.txt  misc.ipynb.txt  modules.rst.txt  older.rst.txt
0.3.1/: barplot.html  boxplot.html  contour.html  genindex.html  grouping.html  install.html  layout.html  misc.html  modules.html  plot.html  ranges.html  sandbox.html  styles.html  ticks.html
0.4.0/: barplot.html  boxplot.html  contour.html  genindex.html  grouping.html  index.html  ini.html  layout.html  misc.html  objects.inv  older.html  plot.html  plot_bokeh.html  sandbox.html  search.html  searchindex.js
0.4.3/: barplot.html  changelog.html  grouping.html  hist.html  index.html  modules.html  older.html  plot.html  py-modindex.html  search.html
0.4.4/: barplot.html  boxplot.html  contour.html  genindex.html  heatmap.html  index.html  install.html  misc.html  modules.html  older.html  plot.html  plot_bokeh.html  py-modindex.html  ranges.html  sandbox.html  search.html  searchindex.js  styles.html
0.5.0/: barplot.html  barplot.ipynb  boxplot.html  changelog.html  contour.html  df_filter.html  filter.html  gantt.html  gantt.ipynb  genindex.html  grouping.html  heatmap.html  hist.html  hist.ipynb  imshow.html  imshow.ipynb  index.html  ini.html  install.html  keyword.html  layout.html  misc.html  misc.ipynb  modules.html  nq.html  objects.inv  older.html  pie.html  plot.html  plot_bokeh.html  py-modindex.html  ranges.html  sandbox.html  search.html  searchindex.js  styles.html  ticks.html  ticks.ipynb
0.5.1/: barplot.html  boxplot.html  contour.html  gantt.html  grouping.html  heatmap.html  imshow.html  index.html  misc.html  nq.html  nq.ipynb  objects.inv  older.html  pie.html  plot.html  ranges.html  search.html  searchindex.js  styles.html  ticks.html
0.5.2/: changelog.html  contour.html  gantt.html  grouping.html  heatmap.ipynb  hist.html  imshow.html  modules.html  objects.inv  py-modindex.html  styles.html  ticks.html
0.5.3/: boxplot.ipynb  contour.html  genindex.html  hist.html  install.html  keyword.html  layout.html  misc.html  modules.html  nq.html  objects.inv  older.html  pie.ipynb  plot.html  sandbox.ipynb  search.html
0.5.4/: barplot.html  barplot.ipynb  boxplot.html  changelog.html  contour.html  gantt.html  genindex.html  grouping.html  heatmap.html  heatmap.ipynb  hist.html  hist.ipynb  imshow.html  index.html  ini.html  install.html  keyword.html  layout.html  misc.html  modules.html  nq.html  objects.inv  older.html  pie.html  plot.html  plot.ipynb  py-modindex.html  ranges.html  sandbox.html  search.html  searchindex.js  styles.html  ticks.html  ticks.ipynb
0.6.0/: .buildinfo  barplot.html  bokeh.html  boxplot.html  boxplot.ipynb  changelog.html  contour.html  example_plots.html  gantt.html  genindex.html  grouping.html  heatmap.html  hist.html  imshow.html  index.html  ini.html  install.html  keyword.html  layout.html  misc.html  modules.html  nq.html  objects.inv  older.html  pie.html  plot-bokeh.html  plot-plotly.html  plot-plotly.ipynb  plot.html  py-modindex.html  ranges.html  sandbox.html  search.html  searchindex.js  styles.html  ticks.html
_sources/: barplot.ipynb.txt  boxplot.ipynb.txt  contour.ipynb.txt  defaults.txt  design.txt  examples.txt  grouping.ipynb.txt  heatmap.ipynb.txt  hist.ipynb.txt  index.txt  install.rst.txt  keyword.rst.txt  keyword.txt  layout.rst.txt  modules.rst.txt  modules.txt  overview.txt  plot.ipynb.txt  quick.txt  ranges.ipynb.txt  styles.ipynb.txt  ticks.ipynb.txt
_static/: theme_overrides.css
doc/: .gitignore  Makefile  barplot.ipynb  bokeh.ipynb  boxplot.ipynb  changelog.rst  conf.py  contour.ipynb  diagram.pptx  example_plots.ipynb  gantt.ipynb  grouping.ipynb  heatmap.ipynb  hist.ipynb  imshow.ipynb  index.rst  ini.rst  install.rst  layout.rst  make.bat  nq.ipynb  older.rst  pie.ipynb  plot-bokeh.ipynb  plot-plotly.ipynb  plot.ipynb  plotly.ipynb  post.py  ranges.ipynb  styles.ipynb  ~$keywords.xlsx
fivecentplots/: .~lock.keywords.xlsx#  I [A] vs Voltage.html  TODO  __init__.py  colors.py  data.py  defaults.py  design.py  fcp.py  fcp_orig.py  fileio.py  keywords.py  keywords.xlsx  layout-mod.py  layout.py  sandbox.py  todo.txt  utilities.py  version.txt
stylesheets/: styles.css
tests/: .coverage  .gitignore  Dockerfile  Dockerfile36  Dockerfile37  README.md  benchmark_analysis.py  benchmark_parse.py  check_plts.py  conftest.py  make_all.py  mpl_timeit_cases.py  test.txt  test_barplot.py  test_boxplot.py  test_contour.py  test_data.py  test_fcp.py  test_gantt.py  test_grouping.py  test_heatmap.py  test_hist.py  test_imshow.py  test_layout.py  test_misc.py  test_nq.py  test_pie.py  test_plot.py  test_plotly.py  test_ranges.py  test_styles.py  test_ticks.py  test_utilities.py
(+821 files in other folders)
