[metadata]
name = fivecentplots
version = file: src/fivecentplots/version.txt
description = Wrapper for popular python plotting packages to make visually appealing plots easier
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Steve Nicholes
license = GPLv3
url = https://github.com/endangeredoxen/fivecentplots
download_url = https://github.com/endangeredoxen/fivecentplots/archive/refs/tags/v0.6.0-alpha.tar.gz
platforms = linux, osx, win32
classifiers=
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages=find:
include_package_data = True
install_requires =
    pandas >= 1.0.5
    numpy
    matplotlib >= 3.0.3
    scipy
    natsort
python_requires = >=3.7

[options.extras_require]
test = pytest==7.2.1
       pytest-benchmark==4.0.0
       pytest-cov==4.0.0
       opencv-python==4.8.1.78
       imageio==2.25.0
       flake8==6.0.0
       pandas==1.5.3
       numpy==1.24.1
       matplotlib==3.6.3
       scipy==1.10.0
       natsort==8.2.0
doc = sphinx==4.1.2
      nbsphinx==0.8.6
      sphinx_rtd_theme==0.5.2
      sphinxcontrib-napoleon==0.7
      nbconvert==5.6.1
      jupyter==1.0.0
      jupyter-contrib-nbextensions==0.5.1
      jupyterlab-pygments==0.1.2
      jupyter-contrib-core==0.3.3
      jinja2==3.0.1
      pandoc==2.2
      colour-demosaicing==0.2.2

[options.packages.find]
where = src
exclude = contrib, docs, __pycache__, tests*

[options.package_data]
fivecentplots = themes/*, test_data/*, version.txt, py.typed

[flake8]
max-line-length = 120
docstring-convention = google