[metadata]
name = fivecentplots
version = file: src/fivecentplots/version.txt
description = Wrapper for popular python plotting packages to make visually appealing plots easier
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Steve Nicholes
license = GPLv3
url = https://github.com/endangeredoxen/fivecentplots
download_url = https://github.com/endangeredoxen/fivecentplots/archive/refs/tags/v0.6.0-alpha.tar.gz
platforms = linux, osx, win32
classifiers=
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages=find:
include_package_data = True
install_requires =
    pandas >= 1.5
    numpy
    matplotlib >= 3.0.3
    scipy
    natsort
python_requires = >=3.7

[options.extras_require]
test = pytest==8.3.3
       pytest-benchmark==4.0.0
       pytest-cov==5.0.0
       opencv-python==4.10.0.84
       imageio==2.35.1
       flake8==7.1.1
       pandas==2.2.3
       numpy==2.1.1
       matplotlib==3.9.2
       scipy==1.14.1
       natsort==8.4.0
       plotly==5.24.1
       osascript==2020.12.3; platform_system=="Darwin"
test_old = pytest==7.1.2
       pytest-benchmark==3.4.1
       pytest-cov==3.0.0
       opencv-python==4.8.1.78
       imageio==2.20.0
       flake8==4.0.1
       pandas==1.5.3
       numpy==1.23.1
       matplotlib==3.6.3
       scipy==1.9.0
       natsort==8.1.0
doc = sphinx==8.1.3
      nbsphinx==0.8.6
      pydata-sphinx-theme==0.16.1
      sphinx-copybutton==0.5.2
      sphinx_design==0.5.0
      sphinx_rtd_theme==0.5.2
      sphinxcontrib-napoleon==0.7
      nbconvert==5.6.1
      jupyter==1.0.0
      jupyter-contrib-nbextensions==0.5.1
      jupyterlab-pygments==0.1.2
      jupyter-contrib-core==0.3.3
      jinja2==3.0.1
      pandoc==2.2
      colour-demosaicing==0.2.2
      sphinxcontrib-spelling==8.0.1

[options.packages.find]
where = src
exclude = contrib, docs, __pycache__, tests*

[options.package_data]
fivecentplots = themes/*, test_data/*, version.txt, kwargs/kwargs_all.txt, py.typed

[flake8]
max-line-length = 120
docstring-convention = google